dark mode button and skills menu jump fix

--- a/style.css
+++ b/style.css
@@ -642,7 +642,9 @@ footer p {
 
 
 
-
+* button {
+  color: black;
+}
 
 
 
